@@ -1,5 +1,7 @@
 2009-??-?? dispatcher 0.9.97
 
+* add more detailed timeout report
+
 2009-07-20 dispatcher 0.9.96
 
 * reopen logs on reload, this prevents using freed identifier by syslog
